@@ -31,10 +31,11 @@ black_scholes <- function(spot = 105, strike = 100, vol = 5, r = 1.25 / 100, tau
 #' @param X Matrix with independent explanatory variables
 #' @return A list object with the \sQuote{loss} and \sQuote{gradient}
 #' @examples
-#' beta_guess <- c(1,2)
-#' y <- c(32,64,96,128,160)
-#' X <- matrix(c(1,10,2,20,3,30,4,40,5,50), ncol=2, byrow=TRUE)
-#' linear_regression(beta_guess, y, X)
+#' data(trees)   # also used in help(lm)
+#' X <- as.matrix(cbind(const=1, trees[, c("Girth", "Height")]))
+#' y <- trees$Volume
+#' linear_regression(X, y, rep(0, 3), tol=1e-12)
+#' coef(lm(y ~ X - 1))  # for comparison
 linear_regression <- function(X, y, theta_hat, initial_lr = 0.1, max_iter = 100L, tol = 1e-7) {
     .Call('_RcppFastAD_linear_regression', PACKAGE = 'RcppFastAD', X, y, theta_hat, initial_lr, max_iter, tol)
 }
